--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button onclick="newGame()">New Game</button>
 
       <div class="column">
-        <h3>GUEST</h3>
+        <h3>AWAY</h3>
         <div>
           <h4 id="guestScore">0</h4>
         </div>
